--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Css flexbox practice",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "npm run clean:dist && webpack",
+    "clean:dist": "cross-var rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-var": "^1.1.0",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
